# pscheduler-result-archiver

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  dashboard.json  docker-compose-host-nw.yml  docker-compose.yml  dump.py  entrypoint.sh  manage.py  plot.py  plot_pscheduler.py  pyproject.toml  requirements.txt  test-requirements.txt
archive/: views.py
archive/templates/: index.html  view.html
archiver/: __init__.py  __main__.py  config.yml  openapi.yml  swagger_code_gen.sh
archiver/common/: config.py  globals.py
archiver/db/: database_manager.py  models.py
archiver/openapi_server/: __main__.py  encoder.py  util.py
archiver/openapi_server/controllers/: archives_controller.py  measurements_controller.py  nav_controller.py  operations_controller.py  (+1 more)
archiver/response/: archives_controller.py  cors_response.py  measurements_controller.py  nav_controller.py  operations_controller.py  security_controller.py
archiver/utils/: archiver_exception.py  log_helper.py  utils.py
archiver_client/archiver_client/: archiver_client.py
json_viewer/: asgi.py  settings.py  urls.py  wsgi.py
nginx/: default.conf
provisioning/dashboards/: env-correlation-dashboard.json  nav-correlation-dashboard.json  pscheduler-archiver-dashboard.json  pscheduler-archiver-dashboard.yml
provisioning/datasources/: datasource.yml
scripts/: archiver_update_config.py  archiver_update_config.sh  enable_docker.sh  migrate_weather_columns.sh  perfsonar-install.sh
tests/: conftest.py  test_config.py  test_cors_response.py  test_database_manager.py  test_metric_extractors.py
(+30 files in other folders)
